Project

General

Profile

Actions

Bug #14979

closed

Invalid argument - ruby_setenv(SURVEY) (Errno::EINVAL)

Bug #14979: Invalid argument - ruby_setenv(SURVEY) (Errno::EINVAL)

Added by tvw (Thomas Volkmar Worm) about 8 years ago. Updated about 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.5.1p57 (2018-03-29 revision 63029) [x64-mingw32]
[ruby-core:88400]

Description

The error occurs with Ruby 2.5.1-2 (x64) on windows as well as with an old Ruby 1.9.3 (x86) on windows, when setting an environment variable:

ENV['SURVEY']="12345"

I am tested it on Windows 10.

The error seems to be triggered, when the environment is big. My environment has a lot of variables (about 400) and set > x.x produces a file of about 34k. My PATH-variable is about 5k.

When I empty my PATH-variable (which also reduces the total environment) the error disappears.

I tried to recreate the issue on linux, but even a much bigger environment is no problem.

And Perl on Windows does not have this problem too.

Actions

Also available in: PDF Atom